[package]
name = "frame_counter"
version = "0.1.2"
authors = ["ko1N <ko1N1337@gmail.com>"]
edition = "2018"
description = "simple frame counter and limiter"
documentation = "https://docs.rs/frame_counter"
readme = "README.md"
repository = "https://github.com/ko1N/frame_counter"
license-file = "LICENSE"

[dependencies]
quanta = { version = "0.12", optional = true }
minstant = { version = "0.1", optional = true }

[[example]]
name = "counter"
path = "examples/counter.rs"

[[example]]
name = "limiter"
path = "examples/limiter.rs"

[features]
default = []
